--- a/src/index.css
+++ b/src/index.css
@@ -21,12 +21,13 @@
 body{
   min-height: 100vh;
   margin: 0;
+
   font-family: 'Roboto', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',  Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: var(--color-primary-text);
   line-height: 1.5;
-  background-color: #fafafa;
+  background-color: bisque;
   scroll-behavior: smooth;
 }
 
