--- a/src/components/Event/Event.module.css
+++ b/src/components/Event/Event.module.css
@@ -1,9 +1,9 @@
 .event {
     position: relative;
-    border: 10px solid bisque ;
+    border: 2px solid ; ;
     padding: 8px;
     border-radius: 4px;
-    background-color: rgb(180, 228, 145);
+    /* background-color: rgb(180, 228, 145); */
 }
 
 .title {
@@ -35,8 +35,8 @@
 
 .chip {
     position: absolute;
-    top: 4;
-    right: 4;
+    top: 4px;
+    right: 4px;
     padding: 4px 8px;
     border-radius: 4px;
     text-transform: uppercase;
